// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIControlWrapper> renders a hidden label, invalid, and an error message 1`] = `
<div
  className="xui-field-layout"
  role="presentation"
>
  <input
    aria-describedby="testGeneratedId-message"
    aria-invalid={true}
    aria-label="Impressive input label"
    id="testGeneratedId-control"
    type="text"
  />
  <div
    className="xui-validation xui-validation-layout xui-validation-is-invalid"
    id="testGeneratedId-message"
    role="status"
  >
    oh no!
  </div>
</div>
`;

exports[`<XUIControlWrapper> renders a simple label, when provided 1`] = `
<div
  className="xui-field-layout"
  role="presentation"
>
  <label
    className="xui-text-label xui-fieldlabel-layout"
    htmlFor="testGeneratedId-control"
  >
    Impressive input label
  </label>
  <input
    aria-invalid={false}
    id="testGeneratedId-control"
    type="text"
  />
</div>
`;

exports[`<XUIControlWrapper> renders basic example 1`] = `
<div
  className="xui-field-layout"
  role="presentation"
>
  <input
    aria-invalid={false}
    id="testGeneratedId-control"
    type="text"
  />
</div>
`;

exports[`<XUIControlWrapper> renders classes and qaHook on all elements 1`] = `
<div
  className="test-field-class xui-field-layout"
  role="presentation"
>
  <label
    className="test-label-class xui-text-label xui-fieldlabel-layout"
    data-automationid="ctrl-wrapper--label"
    htmlFor="testSpecificLabel-control"
  >
    Small input label
  </label>
  <input
    aria-describedby="testSpecificLabel-message"
    aria-invalid={false}
    id="testSpecificLabel-control"
    type="text"
  />
  <div
    className="xui-validation xui-validation-layout"
    data-automationid="ctrl-wrapper--message"
    id="testSpecificLabel-message"
    role="status"
  >
    I will give you a clue
  </div>
</div>
`;
